# radiosity

./: Cargo.toml  README.md
src/: app.rs  camera.rs  lib.rs  light.rs  light.wgsl  main.rs  math.rs  model.rs  primitives.rs  render.rs  scene.rs  shader.wgsl  texture.rs
src/model/: mod.rs  parser.rs  primitives.rs
src/model/parser/: mtl.rs  obj.rs
src/render/: layout.rs  mesh.rs  mod.rs  pipeline.rs  raw.rs  resource.rs
src/scene/: manager.rs  mod.rs
src/shaders/: debug_depth.wgsl  light.wgsl  model_c.wgsl  model_cn.wgsl  model_n.wgsl  model_none.wgsl  phong.wesl  shader.wgsl  shadow.wgsl
