[package]
name = "radiosity"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30", features = ["rwh_05"] }
env_logger = "0.11"
log = "0.4"
wgpu = "25.0"
anyhow = "1.0.95"
thiserror = "2.0.11"
pollster = "0.4"
bytemuck = { version = "1.21.0", features = ["derive"] }
image = "0.25.5"
static_assertions = "1.1.0"
nom = "8.0.0"
nalgebra = "0.34.1"
